--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-4 [约旦前王储自称遭软禁 背后是惊天阴谋？](/articles/dw/1043159.md)
+
 4-4 [台铁太鲁阁号意外 习近平表达慰问](/articles/dw/1043160.md)
 
 4-4 [春天在德国吃什么？](/articles/dw/1043161.md)
@@ -598,6 +600,4 @@
 3-18 [北京判断「东升西落」? 媒体曝美中会谈硬碰硬](/articles/dw/1043457.md)
 
 3-18 [欧盟同意就新疆人权问题制裁中国官员](/articles/dw/1043458.md)
-
-3-18 [反华怒火将中国拖入缅甸政变危机](/articles/dw/1043459.md)
 
