--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-4 [疫情升温 全球基督徒严格防疫措施下庆祝复活节 – 法国国际广播电台 - RFI](/articles/rfi/1032402.md)
+
+4-4 [NASA创新号火星直升机成功着陆 将展开飞行任务 – 法国国际广播电台 - RFI](/articles/rfi/1032403.md)
+
 4-4 [饶舌歌手DMX心脏病发住院 – 法国国际广播电台 - RFI](/articles/rfi/1032404.md)
 
 4-4 [潜海下6500公尺找最深沈船 美军二战驱逐舰现踪 – 法国国际广播电台 - RFI](/articles/rfi/1032405.md)
@@ -596,8 +600,4 @@
 3-27 [新冠：德国将整个法国列为“高风险”地区](/articles/rfi/1032700.md)
 
 3-27 [为重写新冠疫情起源，中国展开的信息战 - 法国世界报](/articles/rfi/1032701.md)
-
-3-27 [新冠溯源报告难产 美国疾控中心前主任指病毒源自武汉实验室](/articles/rfi/1032702.md)
-
-3-27 [拜登邀请习近平和普京参加全球气候视频峰会](/articles/rfi/1032703.md)
 
