--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-5 [缅甸民众用彩蛋传递抗议信息 教宗方济各复活节致辞表达对缅甸年轻人支持](/articles/voa/1041748.md)
+
 4-4 [菲律宾防长连续2天发声明要中国民兵船立即离开菲海域](/articles/voa/1041749.md)
 
 4-4 [移除港英标志 香港城市大学酝酿改名可能只是开始](/articles/voa/1041750.md)
@@ -598,6 +600,4 @@
 3-24 [自由西藏称西方对中国新疆官员的制裁避开了罪魁祸首陈全国](/articles/voa/1042046.md)
 
 3-24 [美国前国务卿克林顿：美国应帮助台湾做好防御，因应军事冲突](/articles/voa/1042047.md)
-
-3-23 [缅甸军政府说抗议者死亡令人“难过”,但表示要结束“无政府”状态](/articles/voa/1042048.md)
 
