--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-5 [拜登4月16日白宫会菅义伟，美欧俄中将重启伊朗核武谈判](/articles/voa/1041745.md)
+
 4-5 [美能源部长: 如果没有共和党人的支持，拜登将推进基础设施建设计划](/articles/voa/1041746.md)
 
 4-5 [约旦政局突变 前王储称被软禁](/articles/voa/1041747.md)
@@ -598,6 +600,4 @@
 3-24 [香港民主思路一国两制指数再创新低 国际关系紧张预期评分趋势下滑](/articles/voa/1042043.md)
 
 3-24 [习近平与金正恩互通口信，承诺发展传统友谊，对付“敌对势力”](/articles/voa/1042044.md)
-
-3-24 [人权团体致信爱彼迎 敦促其撤回对北京冬奥赞助](/articles/voa/1042045.md)
 
