--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-8 [【图说天朝】人民公仆为人民累坏了身体 把接种机会让给了人民](/articles/cdt/384012.md)
+
 4-8 [全现在｜对话制造“淄博火锅鱼”的艺术家坚果兄弟：用荒诞抵抗荒诞](/articles/cdt/384013.md)
 
 4-8 [三联生活周刊｜虎扑，“直男”避风港？](/articles/cdt/384014.md)
@@ -598,6 +600,4 @@
 2-25 [【CDTV】方方：无数个体的声音汇总到一起时它就代表着一个时代](/articles/cdt/385594.md)
 
 2-24 [【立此存照】“狮子交配”涉嫌色情低俗 《动物世界》或将成禁片？](/articles/cdt/385612.md)
-
-2-25 [【404聊天室】谁在帮方方“递刀子”？——听白睿文教授讲《方方日记》翻译背后的故事](/articles/cdt/385616.md)
 
