--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+4-8 [材料短缺、价格飞涨令法国建筑业忧心忡忡 - 今日经济](/articles/rfi/1032229.md)
+
+4-8 [欧股3大指数早盘上扬 – 法国国际广播电台 - RFI](/articles/rfi/1032230.md)
+
+4-8 [澳洲修法 政治人物丧失职场性骚扰究责豁免 – 法国国际广播电台 - RFI](/articles/rfi/1032231.md)
+
 4-8 [东京都将进入“准紧急事态宣言”状态](/articles/rfi/1032232.md)
 
 4-8 [卢卡库进球又助攻 国米克萨索罗 – 法国国际广播电台 - RFI](/articles/rfi/1032233.md)
@@ -594,10 +600,4 @@
 3-30 [投资人对经济复苏希望增 日股随美股涨势收高 – 法国国际广播电台 - RFI](/articles/rfi/1032527.md)
 
 3-30 [港府拟收紧公司查册 记协批窒碍信息自由 小股东保障减](/articles/rfi/1032528.md)
-
-3-30 [亲中机构书籍诬蔑香港「评协」受美国资助 法庭裁诽谤罪成罚25万元](/articles/rfi/1032529.md)
-
-3-30 [遭佛奇、柏克斯批防疫失当 川普发声明回呛 – 法国国际广播电台 - RFI](/articles/rfi/1032530.md)
-
-3-30 [哈登大三元追平队史纪录 篮网近21战豪取18胜 – 法国国际广播电台 - RFI](/articles/rfi/1032531.md)
 
