--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-8 [外国公司在华进退维谷 撤离、硬挺或“一公司两制”](/articles/voa/1041652.md)
+
 4-8 [世行和IMF拟在减债机制中加入气变开支因素](/articles/voa/1041653.md)
 
 4-8 [格陵兰最大反对党赢得选举 将叫停中国作为最大股东的稀土开采项目](/articles/voa/1041654.md)
@@ -598,6 +600,4 @@
 3-27 [博柏利成为首个在新疆问题上遭到中国抵制的奢侈品牌](/articles/voa/1041950.md)
 
 3-27 [中国民族主义浪潮席卷众多国际知名品牌](/articles/voa/1041951.md)
-
-3-26 [北京启动在京外籍人士新冠疫苗接种工作 信息不透明中国疫苗仍受质疑](/articles/voa/1041952.md)
 
