--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+4-8 [中共西藏当局颁布边境新禁令 防止外部渗透](/articles/voa/1041644.md)
+
+4-8 [主要经济体将为IMF注资6,500亿美元](/articles/voa/1041645.md)
+
+4-8 [拜登即将宣布措施遏制枪支暴力](/articles/voa/1041646.md)
+
+4-8 [弗洛伊德谋杀案庭审 专家究责警方过当使用武力](/articles/voa/1041647.md)
+
 4-8 [中国云南瑞丽市委书记因疫情防控“失职”被撤职调查](/articles/voa/1041648.md)
 
 4-8 [称履行对港人责任 英国斥资4300万英镑助BNO港人居英](/articles/voa/1041649.md)
@@ -592,12 +600,4 @@
 3-27 [拜登与英相通话 建议民主国家发起基础设施项目 抗衡中国“一带一路”](/articles/voa/1041942.md)
 
 3-27 [美国谴责中国因新疆棉花针对国际公司展开“国家主导”的社交媒体运动](/articles/voa/1041943.md)
-
-3-27 [多次推迟武汉调查报告 世卫组织：已完成，但需成员国讨论才能发表](/articles/voa/1041944.md)
-
-3-27 [北京掀起抵制西方公司风潮 白宫表示密切关注中国强迫劳动问题](/articles/voa/1041945.md)
-
-3-27 [前美疾控中心主任认为新冠病毒源自武汉实验室 弗契医生称这不代表多数美卫生专家意见](/articles/voa/1041946.md)
-
-3-27 [乌克兰不怕得罪中国，力挺加拿大并冻结马达西奇股份](/articles/voa/1041947.md)
 
