--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,14 @@
 自由亚洲电台
 ------
 
+4-8 [旅美民运元老司马璐遗体告别仪式通过网络举行](/articles/rfa/1045920.md)
+
+4-8 [安徽“猪头人身”漫画作者张冬宁再遭判囚](/articles/rfa/1045921.md)
+
+4-8 [瑞丽市委书记因疫情被撤职    中国疫苗缺货多地暂停第二针](/articles/rfa/1045922.md)
+
+4-8 [台湾立委声援缅甸抗争者 有缅甸人咨询来台寻庇护](/articles/rfa/1045923.md)
+
 4-8 [美中航母先后表态 美国对台是否该转“战略清晰”?](/articles/rfa/1045924.md)
 
 4-8 [北斗系统“掉线”闹出人命   中国定位技术有效性受质疑](/articles/rfa/1045925.md)
@@ -592,12 +600,4 @@
 3-4 [政协报告 :“港人治港”、“高度自治”、“一国两制”全部消失](/articles/rfa/1046218.md)
 
 3-4 [本台台湾记者报道“港版美丽岛”大审判   多名被告自辩称无悔服务社会](/articles/rfa/1046219.md)
-
-3-4 [以“脱贫”之名       中国转移大量维族人离乡就业](/articles/rfa/1046220.md)
-
-3-4 [中国肛拭子检测引国际抗议   疫苗接种进展缓慢](/articles/rfa/1046221.md)
-
-3-4 [微软和印度电网成中国黑客最新受害者](/articles/rfa/1046222.md)
-
-3-4 [数十位缅甸示威者丧生  民众对中国颇有不满](/articles/rfa/1046223.md)
 
