--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-9 [【CDTV】一个卡车司机的愤怒：对司机们的系统性压榨真的令人忍无可忍！](/articles/cdt/383999.md)
+
 4-8 [硬哥｜“淘宝上便宜的汽车定位设备比北斗系统还要可靠”](/articles/cdt/384003.md)
 
 4-8 [【图说天朝】人民公仆为人民累坏了身体 把疫苗接种机会让给了人民](/articles/cdt/384012.md)
@@ -598,6 +600,4 @@
 2-25 [【麻辣总局】Clubhouse上“辱包”房间](/articles/cdt/385579.md)
 
 2-25 [冰点周刊｜一个狱警和8000人的“树洞”](/articles/cdt/385580.md)
-
-2-25 [【CDTV】方方：无数个体的声音汇总到一起时它就代表着一个时代](/articles/cdt/385594.md)
 
