--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-9 [被撤换缅甸驻英大使敦促英国不要承认军政府使节](/articles/voa/1041640.md)
+
+4-9 [国际社会呼吁中共立即释放维族企业家](/articles/voa/1041641.md)
+
 4-9 [拜登政府继续特朗普政策，7家中国超级计算机公司被列入制裁名单](/articles/voa/1041642.md)
 
 4-8 [诞生一周年 推特推出“奶茶联盟”专属表情符号](/articles/voa/1041643.md)
@@ -596,8 +600,4 @@
 3-27 [当美国联手盟友共同制中时，中国也在寻找伙伴“抱团取暖”](/articles/voa/1041938.md)
 
 3-27 [从阿拉斯加到新疆 专家：中国的战狼外交其实是骑虎难下](/articles/voa/1041939.md)
-
-3-27 [印度积极发展制造业 有望部分取代中国](/articles/voa/1041940.md)
-
-3-27 [巨型货轮继续堵住苏伊士运河 航运价格大幅攀升](/articles/voa/1041941.md)
 
