--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-9 [法国新生儿父亲申请休全职育婴假者不到1％](/articles/rfi/1032202.md)
+
 4-9 [默克尔要求普京减少在乌克兰边境的兵力](/articles/rfi/1032203.md)
 
 4-9 [法国首批氢动力列车即将上路 迈向零排放](/articles/rfi/1032204.md)
@@ -598,6 +600,4 @@
 3-31 [美国分公司称要更名 福斯汽车大开愚人节玩笑 – 法国国际广播电台 - RFI](/articles/rfi/1032500.md)
 
 3-31 [拜登提名联邦法官 11人含非裔、穆斯林 – 法国国际广播电台 - RFI](/articles/rfi/1032501.md)
-
-3-31 [通膨隐忧、金融类股重挫 日股随美股收跌 – 法国国际广播电台 - RFI](/articles/rfi/1032502.md)
 
