--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-9 [《福布斯》富豪榜出炉，新晋富豪四成来自中国内地](/articles/rfa/1045914.md)
+
+4-9 [二十四位科学家要求重启溯源调查  无论中国是否参与](/articles/rfa/1045915.md)
+
 4-9 [“长沙富能案”或秘密判决    程渊妻女逃抵美国](/articles/rfa/1045916.md)
 
 4-9 [挽救中欧关系僵局  习近平致电德国总理默克尔](/articles/rfa/1045917.md)
@@ -596,8 +600,4 @@
 3-5 [政协常委报告成读书会  历数去年学习内容](/articles/rfa/1046212.md)
 
 3-4 [“港版美丽岛”大审判    法官准15人保释遭律政司反对续还柙](/articles/rfa/1046213.md)
-
-3-4 [推动台版《马格尼茨基法》 台湾立委向美官员取经](/articles/rfa/1046214.md)
-
-3-4 [广东田屋村换届选举  候选人被逼退选遭恐吓](/articles/rfa/1046215.md)
 
