--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-9 [烟酒小僧 | 《寻找尸体的人》报道被删除风波](/articles/cdt/383992.md)
+
 4-9 [【404文库】极昼工作室｜寻找尸体的人：广东智障男子失踪两年，被杀害后顶替富人火化](/articles/cdt/383997.md)
 
 4-9 [【CDTV】一个卡车司机的愤怒：对司机们的系统性压榨真的令人忍无可忍！](/articles/cdt/383999.md)
@@ -598,6 +600,4 @@
 2-25 [德国之声｜为逼海外家人噤声 中国二度关押新疆维族女子](/articles/cdt/385566.md)
 
 2-25 [【网络民议】各路神医：我做出了一个违背祖宗/训的决定](/articles/cdt/385568.md)
-
-2-25 [【麻辣总局】Clubhouse上“辱包”房间](/articles/cdt/385579.md)
 
