--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+4-9 [明明德 | 一个评论，新疆，棉花](/articles/cdt/383987.md)
+
+4-9 [端传媒 | 肖美丽事件：“港独”围猎与“性别恐怖主义”（节选）](/articles/cdt/383988.md)
+
 4-9 [【404文库】胡锡进｜不要因为我们有14亿人，就认为出一个金德强事件是难免的](/articles/cdt/383989.md)
 
 4-9 [烟酒小僧 | 《寻找尸体的人》报道被删除风波](/articles/cdt/383992.md)
@@ -596,8 +600,4 @@
 2-26 [中国数字时代【敏感词日历】今日上线](/articles/cdt/385525.md)
 
 2-26 [【CDT敏感词周报】第十三期：诋毁解放军、上网追逃、玛丽莲梦六、加拿大国会](/articles/cdt/385561.md)
-
-2-26 [3号厅检票员工 | 同性恋，不是病](/articles/cdt/385562.md)
-
-2-25 [德国之声｜为逼海外家人噤声 中国二度关押新疆维族女子](/articles/cdt/385566.md)
 
