--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-9 [干旱危机中的台湾：保芯片厂供水，停农田灌溉](/articles/nyt/1046985.md)
+
 4-9 [纽约亚裔成立民间巡逻队保护社区](/articles/nyt/1046986.md)
 
 4-9 [简报：美国强势支持台湾；七家中国超级计算机公司被制裁](/articles/nyt/1046987.md)
@@ -598,6 +600,4 @@
 1-20 [美国务院称中国对维吾尔人犯下种族灭绝罪](/articles/nyt/1047283.md)
 
 1-20 [简报：美称中国对维吾尔人种族灭绝；特朗普白宫最后一天](/articles/nyt/1047284.md)
-
-1-19 [别了，“特朗普美学”](/articles/nyt/1047285.md)
 
