--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-9 [“拜登经济学”能赢过中国吗](/articles/nyt/1046983.md)
+
 4-9 [美情报官员警告全球秩序趋向分裂](/articles/nyt/1046984.md)
 
 4-9 [干旱危机中的台湾：保芯片厂供水，停农田灌溉](/articles/nyt/1046985.md)
@@ -598,6 +600,4 @@
 1-20 [梅拉尼娅的第一夫人生涯：自怜、公关灾难和缺席](/articles/nyt/1047281.md)
 
 1-20 [财富与特权：“华为公主”姚安娜娱乐圈出道引争议](/articles/nyt/1047282.md)
-
-1-20 [美国务院称中国对维吾尔人犯下种族灭绝罪](/articles/nyt/1047283.md)
 
