--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+4-9 [中国吉利汽车集团成为国际汽车标准合作组织IATF首个亚洲会员](/articles/reuters/1039530.md)
+
+4-9 [G20澄清汇率立场 确保各国不会采用货币干预提高竞争力--日本财务大臣](/articles/reuters/1039531.md)
+
+4-9 [中国再次呼吁抵制“疫苗民族主义” 承诺维持对经济的货币支持](/articles/reuters/1039532.md)
+
 4-9 [焦点：中国3月CPI年内首度转正后料延续温和升势 PPI仍在筑顶之中](/articles/reuters/1039533.md)
 
 4-9 [中海油称蓬莱平台井喷着火已被扑灭 未发生原油泄漏也未构成环境污染](/articles/reuters/1039534.md)
@@ -594,10 +600,4 @@
 4-1 [Archegos事件重灾户：野村与瑞士信贷合计市值蒸发逾90亿美元](/articles/reuters/1039828.md)
 
 4-1 [美光与西部数据皆考虑收购日本铠侠--华尔街日报](/articles/reuters/1039829.md)
-
-4-1 [中国公募基金去年盈利近2万亿同比增近70% 今年首季新基金募资超万亿--报载](/articles/reuters/1039830.md)
-
-4-1 [财新3月中国制造业PMI逊预期降至50.6 创11个月最低](/articles/reuters/1039831.md)
-
-4-1 [去年第四季美元在全球外储占比降至25年最低 人民币占比连升四季--IMF](/articles/reuters/1039832.md)
 
