--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-9 [金正恩将朝鲜经济困境与1990年代饥荒相提并论](/articles/voa/1041625.md)
+
 4-9 [步步为营 美检察官为立案起诉“誓言守护者”创始人而努力](/articles/voa/1041626.md)
 
 4-9 [美情报部门发表报告 对社会撕裂和冲突可能性提出警告](/articles/voa/1041627.md)
@@ -598,6 +600,4 @@
 3-28 [美加谴责中国因侵犯维吾尔人权问题对美加实体和个人实施报复性制裁](/articles/voa/1041923.md)
 
 3-28 [中国AI实力加速 美国科技优势遇上最危险的时刻？](/articles/voa/1041924.md)
-
-3-28 [缅甸军方节日继续镇压，打死一百多人](/articles/voa/1041925.md)
 
