--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-9 [辽宁新安镇65位公务员仅3人愿接种国产疫](/articles/rfa/1045911.md)
+
 4-9 [被中国制裁的欧洲议员：我们不吃这一套](/articles/rfa/1045912.md)
 
 4-9 [维吾尔学者之子揭批央视纪录片](/articles/rfa/1045913.md)
@@ -598,6 +600,4 @@
 3-5 [拜登罕见公布国安指南   中国是“最大地缘政治挑战”](/articles/rfa/1046209.md)
 
 3-5 [为新疆种族灭绝和两加拿大人被拘捕   特鲁多和丛培武隔空叫阵](/articles/rfa/1046210.md)
-
-3-5 [法囯通过CGTN牌照申请  学者称法国人未意识中国官媒的假信息风险](/articles/rfa/1046211.md)
 
