--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-9 [中国推出歌舞片反驳新疆指控](/articles/dw/1043075.md)
+
 4-9 [阿斯利康未能交付疫苗 印尼向中国求援](/articles/dw/1043076.md)
 
 4-9 [美国将中国超级计算机实体列入黑名单](/articles/dw/1043077.md)
@@ -598,6 +600,4 @@
 3-23 [美加英欧联合制裁新疆官员 澳纽发声明站队](/articles/dw/1043373.md)
 
 3-23 [欧盟中国相互制裁 欧议员警告欧中协议堪忧](/articles/dw/1043374.md)
-
-3-23 [再次“战狼附体”？中国使馆称不搞“羔羊外交”](/articles/dw/1043375.md)
 
