--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-9 [欧洲议会议员：中国对人权制裁的反制或影响欧中投资协议](/articles/voa/1041623.md)
+
+4-9 [据报前香港议员郭荣铿与家人已经到达加拿大](/articles/voa/1041624.md)
+
 4-9 [金正恩将朝鲜经济困境与1990年代饥荒相提并论](/articles/voa/1041625.md)
 
 4-9 [步步为营 美检察官为立案起诉“誓言守护者”创始人而努力](/articles/voa/1041626.md)
@@ -596,8 +600,4 @@
 3-28 [中国拟推新广电法 核心价值观与“薪酬封顶”引争议](/articles/voa/1041921.md)
 
 3-28 [菲战机飞越南中国海争议水域中数百中国渔船](/articles/voa/1041922.md)
-
-3-28 [美加谴责中国因侵犯维吾尔人权问题对美加实体和个人实施报复性制裁](/articles/voa/1041923.md)
-
-3-28 [中国AI实力加速 美国科技优势遇上最危险的时刻？](/articles/voa/1041924.md)
 
