--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-9 [中国在牛轭礁故技重施被指试探美国抗衡决心](/articles/voa/1041621.md)
+
 4-9 [中国称将采取措施维护受美制裁公司权益](/articles/voa/1041622.md)
 
 4-9 [欧洲议会议员：中国对人权制裁的反制或影响欧中投资协议](/articles/voa/1041623.md)
@@ -598,6 +600,4 @@
 3-29 [不理国际谴责 普京为何力挺缅甸独裁军头？](/articles/voa/1041919.md)
 
 3-28 [美国等12国防长罕见发表联合声明谴责缅甸军方杀戮平民](/articles/voa/1041920.md)
-
-3-28 [中国拟推新广电法 核心价值观与“薪酬封顶”引争议](/articles/voa/1041921.md)
 
