--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+4-18 [【立此存照】怀疑弟弟打中国疫苗后死亡遭封禁；胡锡进泄露“特供疫苗”秘密？](/articles/cdt/383599.md)
+
+4-17 [干货 | 苏庆：《支部建在楼上》油画技法分析](/articles/cdt/383601.md)
+
 4-17 [【立此存照】4起“危害国家安全典型案例”：河北在校大学生田创涉嫌煽动颠覆国家政权罪](/articles/cdt/383608.md)
 
 4-17 [【图说天朝】汕头大学的假期读书班书单](/articles/cdt/383618.md)
@@ -596,8 +600,4 @@
 3-16 [【图说天朝】“一切问题都是工作人员小王造成的”](/articles/cdt/384934.md)
 
 3-16 [向承美｜《白日一删尽》123首当代诗词艺术展暨获奖作品揭晓](/articles/cdt/384937.md)
-
-3-16 [Lovetrumpshate｜难以置信的事实：绝大部分国人只有小学和初中学历](/articles/cdt/384939.md)
-
-3-16 [【旧闻重温】马云：北京雾霾特别高兴 特权阶层没特供空气了](/articles/cdt/384946.md)
 
