--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-18 [英国女王伊丽莎白二世与菲利普亲王告别](/articles/rfi/1031625.md)
+
 4-18 [印度Covid疫苗生产商请美国解除禁运](/articles/rfi/1031626.md)
 
 4-18 [NASA选择SpaceX 送人重返月球  建中转站](/articles/rfi/1031627.md)
@@ -598,6 +600,4 @@
 4-13 [巴拉圭单日78人染疫病故 境内新高 – 法国国际广播电台 - RFI](/articles/rfi/1031923.md)
 
 4-13 [美警乌龙枪杀非裔案 明尼苏达职业赛一律停摆 – 法国国际广播电台 - RFI](/articles/rfi/1031924.md)
-
-4-13 [日本正式决定福岛核废水排入海 2年后实施 – 法国国际广播电台 - RFI](/articles/rfi/1031925.md)
 
