--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-18 [美日联合领导人声明 — 美日面向新时代的全球合作伙伴](/articles/voa/1041434.md)
+
 4-18 [缅甸释放数千名犯人，民族团结政府呼吁国际社会承认](/articles/voa/1041435.md)
 
 4-17 [大流疫让人类付出巨大代价：300万人死亡，1.4亿人感染](/articles/voa/1041436.md)
@@ -598,6 +600,4 @@
 4-5 [何瑞恩: 阿拉斯加会谈没有改变美中两国“竞争性相互依存”的本质](/articles/voa/1041732.md)
 
 4-5 [外交、金援双管齐下 中国拉拢东南亚回击美国](/articles/voa/1041733.md)
-
-4-5 [中国新冠病毒疫情出现反复 当局大力推广国产疫苗接种](/articles/voa/1041734.md)
 
