--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-18 [俄罗斯乌克兰相互驱逐外交官](/articles/voa/1041431.md)
+
+4-18 [伊朗核协议谈判维也纳恢复举行](/articles/voa/1041432.md)
+
 4-18 [美欧谴责香港判决民主派人士，质疑中国履行国际承诺的意愿](/articles/voa/1041433.md)
 
 4-18 [美日联合领导人声明 — 美日面向新时代的全球合作伙伴](/articles/voa/1041434.md)
@@ -596,8 +600,4 @@
 4-6 [菲律宾总统府就中国船只入侵向北京发出严厉警告](/articles/voa/1041729.md)
 
 4-5 [何瑞恩: 阿拉斯加会谈没有改变美中两国“竞争性相互依存”的本质](/articles/voa/1041730.md)
-
-4-5 [中国军机连续3天扰台 其中1架次侵入台东南空域](/articles/voa/1041731.md)
-
-4-5 [何瑞恩: 阿拉斯加会谈没有改变美中两国“竞争性相互依存”的本质](/articles/voa/1041732.md)
 
