--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -11,6 +11,8 @@
 
 4-17 [【立此存照】4起“危害国家安全典型案例”：河北在校大学生田创涉嫌煽动颠覆国家政权罪](/articles/cdt/383608.md)
 
+4-18 [尖椒部落 | 货车司机自杀的背后是科技神话的破灭](/articles/cdt/383614.md)
+
 4-17 [【图说天朝】汕头大学的假期读书班书单](/articles/cdt/383618.md)
 
 4-17 [【网络民议】常玮平律师：从来也不想颠覆谁，我只是想做对的事，讲堂堂正正的道理](/articles/cdt/383619.md)
@@ -598,6 +600,4 @@
 3-17 [红星新闻 | 独家对话“敲诈多名公职人员”女辅警父亲：副局长落马前曾给我女儿50万现金](/articles/cdt/384922.md)
 
 3-17 [【异闻观止】环球时报 | 俄虽夺我大片领土 中国舆论应多挺普京](/articles/cdt/384924.md)
-
-3-16 [【CDTV】肖美丽Herstory演讲：让我们成为变革中一次次小小的心跳](/articles/cdt/384929.md)
 
