--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-18 [美中紧张之际 伯恩斯如获任命，将是怎样的驻华大使？](/articles/voa/1041429.md)
+
 4-18 [捷克驱逐18名俄罗斯外交官](/articles/voa/1041430.md)
 
 4-18 [俄罗斯乌克兰相互驱逐外交官](/articles/voa/1041431.md)
@@ -598,6 +600,4 @@
 4-6 [专家称脸书超5亿用户资料被泄露 中国67万多用户受影响](/articles/voa/1041727.md)
 
 4-6 [德日将举行首次2+2对话，联手遏制中国](/articles/voa/1041728.md)
-
-4-6 [菲律宾总统府就中国船只入侵向北京发出严厉警告](/articles/voa/1041729.md)
 
