--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-18 [纳瓦尼狱中绝食性命堪忧 拜登：处境太不公平 – 法国国际广播电台 - RFI](/articles/rfi/1031611.md)
+
+4-18 [睽违12年6个月又25天 勇士卡兹玛重返大联盟 – 法国国际广播电台 - RFI](/articles/rfi/1031612.md)
+
 4-18 [美中发表联合声明 承诺共同合作因应气候危机 – 法国国际广播电台 - RFI](/articles/rfi/1031613.md)
 
 4-18 [拜登打高球 上任后第一次 – 法国国际广播电台 - RFI](/articles/rfi/1031614.md)
@@ -596,8 +600,4 @@
 4-13 [中国户口再松绑？300万以下城市称可自由落户](/articles/rfi/1031909.md)
 
 4-13 [菅义伟第一位外国首脑与拜登面对面 也聚焦中国](/articles/rfi/1031910.md)
-
-4-13 [30名军人与人口失踪案有关 遭墨西哥当局逮捕 – 法国国际广播电台 - RFI](/articles/rfi/1031911.md)
-
-4-13 [巴黎惊传医院枪击案1死1重伤 动机疑为寻仇 – 法国国际广播电台 - RFI](/articles/rfi/1031912.md)
 
