--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-18 [双航母高调露脸 中国意图建立亚太海洋新秩序？](/articles/voa/1041426.md)
+
 4-18 [蚂蚁金服如何甩掉马云](/articles/voa/1041427.md)
 
 4-18 [美中发表处理气候危机联合声明](/articles/voa/1041428.md)
@@ -598,6 +600,4 @@
 4-6 [新冠疫情迫使白宫复活节滚彩蛋活动连续第二年被取消](/articles/voa/1041724.md)
 
 4-6 [拜登希望提高美国公司税 几十家大公司目前分文不交](/articles/voa/1041725.md)
-
-4-6 [时事大家谈: 中国的疫苗焦虑：“体制优势”能否笑到最后？](/articles/voa/1041726.md)
 
