--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-18 [德国哀悼近8万新冠死亡者](/articles/dw/1042912.md)
+
+4-18 [疫情之下的英国菲利普亲王葬礼](/articles/dw/1042913.md)
+
 4-18 [福岛核废水倾倒海洋： 渔民说不、 中韩反对、 美国支持](/articles/dw/1042914.md)
 
 4-18 [墙外文摘：中国对拜登期望落空会怎样？](/articles/dw/1042915.md)
@@ -596,8 +600,4 @@
 4-1 [挺人权拒收中国学生？澳学刊被批种族歧视](/articles/dw/1043210.md)
 
 4-1 [美外交官:一旦台海局势突变 美澳将采取联合行动](/articles/dw/1043211.md)
-
-4-1 [塞尔维亚：人人免费打疫苗 外国人纷纷赶来！](/articles/dw/1043212.md)
-
-4-1 [记者手记：在美华人如何看中国的外交政策](/articles/dw/1043213.md)
 
