--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-18 [学人Scholar｜郑宗义：放任人文学科萎缩，社会将付出沉重代价](/articles/cdt/383549.md)
+
 4-18 [【图说天朝】自己父母自己养 不推政府不推党](/articles/cdt/383553.md)
 
 4-18 [老朱煮酒 | 流水账4月12-13日](/articles/cdt/383566.md)
@@ -598,6 +600,4 @@
 3-17 [勿以类拒｜大胃王吃播博主“泡泡龙”之死](/articles/cdt/384913.md)
 
 3-17 [德国之声 | 美媒：中国要求阿里巴巴出售旗下媒体业务](/articles/cdt/384918.md)
-
-3-17 [记录者刘杰 | 女辅警父亲发声微博阅读量1.1亿，官方撤稿尴尬了谁？](/articles/cdt/384921.md)
 
