--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-19 [【CDTV】墙国蛙蛤蛤｜温家宝文章墙内遭禁，只因处处高级黑习近平？！](/articles/cdt/383539.md)
+
 4-19 [【网络民议】温家宝忆母文章疑遭审查  网民：搞得我的斯德哥尔摩综合症又犯了](/articles/cdt/383547.md)
 
 4-18 [学人Scholar｜郑宗义：放任人文学科萎缩，社会将付出沉重代价](/articles/cdt/383549.md)
@@ -598,6 +600,4 @@
 3-17 [【弄个大新闻】为了说服自己的父母，年轻人决定用微信公号“以毒攻毒”](/articles/cdt/384906.md)
 
 3-17 [六神磊磊｜脱口秀这东西就不适合我国国情](/articles/cdt/384908.md)
-
-3-17 [八点健闻｜百余种中成药修改说明书，曾长期享有“不良反应一笔带过”的特权](/articles/cdt/384910.md)
 
