--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-19 [维族强迫劳动议题延烧  大众汽车新疆厂受质疑](/articles/dw/1042910.md)
+
 4-19 [俄罗斯反制捷克制裁 驱逐20名捷克外交官](/articles/dw/1042911.md)
 
 4-18 [德国哀悼近8万新冠死亡者](/articles/dw/1042912.md)
@@ -598,6 +600,4 @@
 4-1 [世卫组织批评欧洲新冠疫苗接种堪比龟速](/articles/dw/1043208.md)
 
 4-1 [长平观察：暴力受害者群体为何成为隐形人](/articles/dw/1043209.md)
-
-4-1 [挺人权拒收中国学生？澳学刊被批种族歧视](/articles/dw/1043210.md)
 
