--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,20 @@
 路透
 ------
 
+4-19 [沃尔沃将向中国滴滴出行旗下自动驾驶公司提供测试用车](/articles/reuters/1039150.md)
+
+4-19 [中国3月对朝鲜出口额增至六个月高位 是前两个月总出口的近400倍](/articles/reuters/1039151.md)
+
+4-19 [中国将保持对经济恢复必要支持力度 大宗商品价格不具备长期上涨基础--发改委](/articles/reuters/1039152.md)
+
+4-19 [调查：加拿大经济增速可能放缓 但疫情对增长威胁不大](/articles/reuters/1039153.md)
+
+4-19 [《图表新闻》五大主题：欧洲央行会议登场 关注未来购债步伐](/articles/reuters/1039154.md)
+
+4-19 [中国总人口按目前趋势或很快出现负增长 自主生育“越快放开越好”--专家](/articles/reuters/1039155.md)
+
+4-19 [中国将保持对经济恢复的必要支持力度 加强原材料等市场调节--发改委](/articles/reuters/1039156.md)
+
 4-19 [一周展望：科技股重领风骚 投资者关注债券收益率和公司业绩](/articles/reuters/1039157.md)
 
 4-19 [欧洲12家足球豪门宣布成立超级联赛 被足联和政界炮轰](/articles/reuters/1039158.md)
@@ -586,18 +600,4 @@
 4-12 [即时观点：中国3月新增贷款及社融增量一高一低 M2增速略逊预期](/articles/reuters/1039448.md)
 
 4-12 [沙特将满足多数亚洲客户减少5月石油供应的要求--消息人士](/articles/reuters/1039449.md)
-
-4-12 [腾讯支持的水滴公司赴美IPO遭到中国监管当局反对--消息人士](/articles/reuters/1039450.md)
-
-4-12 [热点聚焦：不应过分解读中国高层会议谈物价 政策着力点仍是“放水养鱼”](/articles/reuters/1039451.md)
-
-4-12 [中国3月社融增量3.34万亿稍低于预期 月末存量295万亿同比增12.3%](/articles/reuters/1039452.md)
-
-4-12 [伊朗外长谴责以色列挑起纳坦兹核设施事件 誓言要报仇--国家电视台](/articles/reuters/1039453.md)
-
-4-12 [日本拟决定将核废水排海 中国外交部称已向日方表明“严重关切”](/articles/reuters/1039454.md)
-
-4-12 [中国股市下跌逾1% 受材料和运输类股跌势打压](/articles/reuters/1039455.md)
-
-4-12 [韩国金融监管机构将调查现代汽车高管内幕交易嫌疑--报载](/articles/reuters/1039456.md)
 
