--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+4-22 [巴基斯坦饭店爆炸造成4死 中国大使躲过一劫 – 法国国际广播电台 - RFI](/articles/rfi/1031333.md)
+
+4-22 [布拉格下最后通牒 要求让捷克外交官返莫斯科 – 法国国际广播电台 - RFI](/articles/rfi/1031334.md)
+
+4-22 [欧股收红 – 法国国际广播电台 - RFI](/articles/rfi/1031335.md)
+
+4-22 [美施打完2亿剂疫苗 拜登赞绝佳成就 – 法国国际广播电台 - RFI](/articles/rfi/1031336.md)
+
 4-22 [习近平将参加拜登主持的视讯气候峰会 - 法国世界报](/articles/rfi/1031337.md)
 
 4-22 [美国参院外委会高票通过为中国量身定制的“战略竞争法案“ - 要闻分析](/articles/rfi/1031338.md)
@@ -592,12 +600,4 @@
 4-17 [加拿大助港人移民计划首3周获逾500份申请](/articles/rfi/1031631.md)
 
 4-17 [美国警员开枪杀人层出不穷 公众信任度跌至低点 – 法国国际广播电台 - RFI](/articles/rfi/1031632.md)
-
-4-17 [增加难民入境人数恐难兑现  党内同志抨击拜登 – 法国国际广播电台 - RFI](/articles/rfi/1031633.md)
-
-4-17 [武汉肺炎死亡病例全球破300万  确诊近1亿4000万 – 法国国际广播电台 - RFI](/articles/rfi/1031634.md)
-
-4-17 [法德支持乌克兰 吁俄军撤离乌边境](/articles/rfi/1031635.md)
-
-4-17 [Covid-19: 巴西卫生部请女性推迟怀孕](/articles/rfi/1031636.md)
 
