--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-22 [拜登对美国能向其他国家提供新冠疫苗表示有信心](/articles/voa/1041339.md)
+
 4-22 [世界领导人计划在美国主办的气候峰会上讲话](/articles/voa/1041340.md)
 
 4-22 [欧盟宣布加强人工智能管理的建议措施](/articles/voa/1041341.md)
@@ -598,6 +600,4 @@
 4-9 [时事大家谈: 拜登要斥巨资推基建，北京是喜是忧？](/articles/voa/1041637.md)
 
 4-9 [美国制裁缅甸珠宝行业](/articles/voa/1041638.md)
-
-4-9 [中国人大修改后香港选委会及立法会组成 民主党未定参选否](/articles/voa/1041639.md)
 
