--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-22 [【CDTV】波特王 | 被說收錢？是政府打手？！遭到五毛自媒體圍攻｜四月的粉紅月報-上集](/articles/cdt/383414.md)
+
 4-22 [【CDTV】波特王 | 大搞批鬥？粉紅專打自己人？到底怎樣才能不辱華？｜三月粉紅月報-下集](/articles/cdt/383415.md)
 
 4-22 [丨Just Fist It丨 | 大型女权猎巫行动中的三位性别恐怖分子，到底是什么人？](/articles/cdt/383416.md)
@@ -598,6 +600,4 @@
 3-21 [纽约客 | 何伟：”中国制造“外交的兴起](/articles/cdt/384732.md)
 
 3-21 [剥洋葱people | 一间出租屋与300个蜗居抗癌的家庭](/articles/cdt/384736.md)
-
-3-21 [【网络民议】今天是孙志刚的忌日，请记住他](/articles/cdt/384752.md)
 
