--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-22 [台积电创办人张忠谋：台湾应守住半导体製造](/articles/dw/1042858.md)
+
+4-22 [美再提抗中法案 人权与经济战略双管齐下](/articles/dw/1042859.md)
+
 4-21 [拟限制滥用人工智能 欧委会公布法规草案](/articles/dw/1042860.md)
 
 4-21 [德语媒体：中国前总理被“戴嘴套”](/articles/dw/1042861.md)
@@ -596,8 +600,4 @@
 4-4 [菅义伟盼美日合作缓和两岸局势](/articles/dw/1043156.md)
 
 4-4 [面对中国：菲防长严厉指责 菲外长盛赞友谊](/articles/dw/1043157.md)
-
-4-4 [莫扎特漫步哈瓦那](/articles/dw/1043158.md)
-
-4-4 [约旦前王储自称遭软禁 背后是惊天阴谋？](/articles/dw/1043159.md)
 
