--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-22 [德外长警告：与中国脱钩将是错误的做法](/articles/dw/1042851.md)
+
+4-22 [美国棉花禁令下 新疆对美出口依旧增长](/articles/dw/1042852.md)
+
 4-22 [巴基斯坦一豪华酒店外发生汽车炸弹袭击](/articles/dw/1042853.md)
 
 4-22 [学者：撕毁“一带一路”协议，澳洲弃中选美](/articles/dw/1042854.md)
@@ -596,8 +600,4 @@
 4-5 [埃及木乃伊大游行](/articles/dw/1043149.md)
 
 4-5 [澳智库：中国运用西方社媒做新疆大外宣](/articles/dw/1043150.md)
-
-4-5 [缅甸示威者发动复活节示威 军方持续暴力镇压](/articles/dw/1043151.md)
-
-4-5 [冲突未完? 印度冻结字节跳动银行账户](/articles/dw/1043152.md)
 
