--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-22 [拜登提名前助理和中国通出任国防部印太事物助理部长](/articles/voa/1041319.md)
+
+4-22 [台湾开始为2050实现零排放制定计划](/articles/voa/1041320.md)
+
+4-22 [VOA访谈：美参议员谈美中关系、日本战后重建及美日关系](/articles/voa/1041321.md)
+
 4-22 [拜登与特鲁多通话 再度谴责中国“任意拘押”两名加拿大人](/articles/voa/1041322.md)
 
 4-22 [巴基斯坦一家酒店发生炸弹爆炸 疑针对中国代表团](/articles/voa/1041323.md)
@@ -594,10 +600,4 @@
 4-9 [人道团体：缅甸军方仍在袭击少数民族城邦](/articles/voa/1041617.md)
 
 4-9 [专家：全球最大芯片代工厂扩大产能无法彻底缓解全球芯片短缺问题](/articles/voa/1041618.md)
-
-4-9 [中国富豪快速聚敛财富，大卡司机却为两千罚款服毒自杀](/articles/voa/1041619.md)
-
-4-9 [香港立法会质疑限制民众查阅公司资料安排 官员：平衡隐私及知情权](/articles/voa/1041620.md)
-
-4-9 [中国在牛轭礁故技重施被指试探美国抗衡决心](/articles/voa/1041621.md)
 
