--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-22 [上海前首富周正毅60岁生日晚宴   官媒6名主持人捧场入“黑名单”](/articles/rfa/1045795.md)
+
 4-22 [台湾缺水电隐患严重  传台积电传移部分晶圆产能至南京](/articles/rfa/1045796.md)
 
 4-22 [武汉病毒所碰不得   中国和谭德塞翻脸？](/articles/rfa/1045797.md)
@@ -598,6 +600,4 @@
 3-23 [日美罕见明示将合作应对台海冲突](/articles/rfa/1046093.md)
 
 3-22 [哈尔滨 “清除旧规陋习”    清明节前夕严打冥纸冥币](/articles/rfa/1046094.md)
-
-3-22 [贵阳仁爱教会被取缔信徒被拘留   上海一家庭教会被警察冲击](/articles/rfa/1046095.md)
 
