--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-22 [印度疫情升温 单日确诊破31万人](/articles/dw/1042850.md)
+
 4-22 [德外长警告：与中国脱钩将是错误的做法](/articles/dw/1042851.md)
 
 4-22 [美国棉花禁令下 新疆对美出口依旧增长](/articles/dw/1042852.md)
@@ -598,6 +600,4 @@
 4-5 [应对中国挑战，澳大利亚通过学术自由新法律](/articles/dw/1043148.md)
 
 4-5 [埃及木乃伊大游行](/articles/dw/1043149.md)
-
-4-5 [澳智库：中国运用西方社媒做新疆大外宣](/articles/dw/1043150.md)
 
