--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-23 [俄抗议活动出现新趋势 西伯利亚地区和知识界不满加剧](/articles/voa/1041312.md)
+
+4-23 [特斯拉高压之下态度转变 愿与当局合作解决“刹车失灵”纠纷](/articles/voa/1041313.md)
+
+4-23 [美主办环境峰会登场 各国领袖发表各方减排计划](/articles/voa/1041314.md)
+
 4-22 [香港获奖记者为报道“7.21”事件查车辆信息一案被判有罪](/articles/voa/1041315.md)
 
 4-22 [澳大利亚总理: 取消维多利亚州“一带一路”协议是出于国家利益](/articles/voa/1041316.md)
@@ -594,10 +600,4 @@
 4-10 [美国务院公布新的美台官员交往准则 台湾表示欢迎](/articles/voa/1041610.md)
 
 4-10 [民调：68%指人大修改香港选举制度 拉远民主普选距离](/articles/voa/1041611.md)
-
-4-10 [拜登庞大开支计划将美国带入“大政府时代” ？](/articles/voa/1041612.md)
-
-4-10 [马云的事情没完没了，湖畔大学招生已被叫停](/articles/voa/1041613.md)
-
-4-10 [向心夫妇涉嫌洗钱 被台湾检方起诉](/articles/voa/1041614.md)
 
