--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-23 [香港与新加坡推迟发布“旅行泡泡”计划](/articles/voa/1041311.md)
+
 4-23 [俄抗议活动出现新趋势 西伯利亚地区和知识界不满加剧](/articles/voa/1041312.md)
 
 4-23 [特斯拉高压之下态度转变 愿与当局合作解决“刹车失灵”纠纷](/articles/voa/1041313.md)
@@ -598,6 +600,4 @@
 4-10 [缅甸民选政府的驻联合国大使呼吁实施禁飞区和武器禁运](/articles/voa/1041609.md)
 
 4-10 [美国务院公布新的美台官员交往准则 台湾表示欢迎](/articles/voa/1041610.md)
-
-4-10 [民调：68%指人大修改香港选举制度 拉远民主普选距离](/articles/voa/1041611.md)
 
