--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+4-27 [印度疫情严峻  首批外援运抵 – 法国国际广播电台 - RFI](/articles/rfi/1030997.md)
+
+4-27 [菲外交部：杜特尔特上台后已向中国提出78次外交抗议](/articles/rfi/1030998.md)
+
+4-27 [回应“结束一党专政”口号 林郑：要尊重执政的中国共产党](/articles/rfi/1030999.md)
+
+4-27 [斐济爆发群聚疫情  当局忧病例海啸 – 法国国际广播电台 - RFI](/articles/rfi/1031000.md)
+
 4-27 [日本防卫相欢迎英国航母打击群到访](/articles/rfi/1031001.md)
 
 4-27 [联合国缅甸人权状况特别报告员要求缅甸当局遵守承诺 立即终止暴力行为](/articles/rfi/1031002.md)
@@ -592,12 +600,4 @@
 4-22 [合同取消、5G、间谍活动：中澳关系持续紧张](/articles/rfi/1031295.md)
 
 4-22 [经过反修例风暴这场政治大摊牌，香港已不可能回到从前 - 观察中国](/articles/rfi/1031296.md)
-
-4-22 [欧洲律师协会致函习近平呼吁释放陕西律师常玮平](/articles/rfi/1031297.md)
-
-4-22 [地球母亲日 联合国警告临界点 拜登召集气候峰会夺世界领袖地位](/articles/rfi/1031298.md)
-
-4-22 [继亚股和美股反弹  欧股3大指数乘势开高 – 法国国际广播电台 - RFI](/articles/rfi/1031299.md)
-
-4-22 [北约酝酿开峰会 加快修复与美国合作](/articles/rfi/1031300.md)
 
