--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-28 [中国独裁并违背经济承诺  欧盟报告对欧中关系表悲观](/articles/rfa/1045751.md)
+
 4-28 [西藏人权报告：中共压制西藏达“危害人类罪”水平](/articles/rfa/1045752.md)
 
 4-27 [专访陈维明：“奥斯卡中国自由人权奖”的历史与本届特点](/articles/rfa/1045753.md)
@@ -598,6 +600,4 @@
 3-26 [“学术自由指数”中国排名垫底  香港低过俄罗斯](/articles/rfa/1046049.md)
 
 3-25 [文革红剧《白毛女》等成中共党庆重头戏](/articles/rfa/1046050.md)
-
-3-25 [蔡英文要打造半导体“护国群山” 但面临内忧外患](/articles/rfa/1046051.md)
 
